# windows-camera-feed

./: .gitignore  CMakeLists.txt  README.md  windows-camera-feed.gdextension
src/: register_types.cpp  windows_camera_feed.cpp  windows_camera_feed.h
